--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-  <title>haze the god of lithium</title>
+  <title>lieless the god of lithium</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,7 +67,7 @@
 <source src="media/song.mp3" type="audio/mpeg">
 </audio>
 <div id="content-container">
-  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Haze.. <img class="emoji" src="images/seperator.png"></div>
+  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Kubuś (Lieless).. <img class="emoji" src="images/seperator.png"></div>
   <span id="typing" class="center"></span>
   <div class="inline-container bottombar center">
     <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
@@ -76,7 +76,7 @@
     <div class="discord-icon">
       <img src="https://github.com/verlonv/haze.github.io/releases/download/zdj/discord.png" alt="Discord Icon">
     </div>
-    <div class="maslaktrb-text">h3jzior - new acc, old disabled for hacking</div>
+    <div class="maslaktrb-text">kvbusiek._ <-- Discord </div>
   </div>
 </div>
   <script src="js/particles.min.js"></script>
@@ -93,7 +93,7 @@
         aud.play();
   
         var typed = new Typed("#typing", {
-          strings: ["physics master", "programmer/hacker", "lithium co-leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "Nie umiem przestać o tobie myśleć...", "h3jzior - discord", "Po różne usługi typu hacking DM."], 
+          strings: [" you cant get out of my fucking head", "hacker", "lithium co-leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "Nie umiem przestać o tobie myśleć...", " kvbusiek._ - discord", "Po różne usługi typu hacking DM.", "Wydostań się z mojej głowy kurwa"], 
           typeSpeed: 60,
           backspeed: 58,
           showCursor: true,
@@ -139,7 +139,7 @@
   parentElement.insertBefore(downloadButton1, typingElement);
   downloadButton1.appendChild(buttonLink1);
         
-  var lines = ["Lithium hacks", "lithium owns you", "the only one choice", "the only one god"];
+  var lines = ["Lithium hacks", "lithium owns you", "the only one choice", "the only one god, death, pain, hurt love, you cant get out of my fucking head"];
 for (var x = 0; x < lines.length; x++) {
   $("#marquee").append(`${lines[x]}${(x < lines.length - 1 ? '<img class="emoji" src="images/seperator.png"> ' : '')}`);
 }
