--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-  <title>axyon/axiis the god of lithium</title>
+  <title>Amnestyo the god of lithium</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,7 +67,7 @@
 <source src="media/song.mp3" type="audio/mpeg">
 </audio>
 <div id="content-container">
-  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Kubuś (Lithium owner, main developer) <img class="emoji" src="images/seperator.png"></div>
+  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Kuba (Lithium owner, main developer) <img class="emoji" src="images/seperator.png"></div>
   <span id="typing" class="center"></span>
   <div class="inline-container bottombar center">
     <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
@@ -76,7 +76,7 @@
     <div class="discord-icon">
       <img src="https://github.com/verlonv/haze.github.io/releases/download/zdj/discord.png" alt="Discord Icon">
     </div>
-    <div class="maslaktrb-text">axyonyo <-- Discord </div>
+    <div class="maslaktrb-text">lostcentxry_ <-- Discord </div>
   </div>
 </div>
   <script src="js/particles.min.js"></script>
