--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         aud.play();
   
         var typed = new Typed("#typing", {
-          strings: ["anonymous", "lithium main founder", "lithium leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "KJBGSDKLJBSKJBSKLJFSB", "axyonyo - discord", "Po różne usługi typu hacking DM.", "PERSONAL BEST..", "LOADING", ".", ".", ".", "REPROGRAMMING", "study", "sleep", "pray", "eat", "train", "REPEAT...", "(!*&!*(&(*!&(*&!$!$)(!*$)(*!$)(*!$)(&!$)(&#)("], 
+          strings: ["anonymous", "lithium main founder", "lithium leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "KJBGSDKLJBSKJBSKLJFSB", "lostcentxry_ - discord", "Po różne usługi typu hacking DM.", "PERSONAL BEST..", "LOADING", ".", ".", ".", "REPROGRAMMING", "study", "sleep", "pray", "eat", "train", "REPEAT...", "(!*&!*(&(*!&(*&!$!$)(!*$)(*!$)(*!$)(&!$)(&#)("], 
           typeSpeed: 60,
           backspeed: 58,
           showCursor: true,
