--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <source src="media/song.mp3" type="audio/mpeg">
 </audio>
 <div id="content-container">
-  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Lostcentury (Lithium owner, main developer) <img class="emoji" src="images/seperator.png"></div>
+  <div class="center title topbar"><img class="emoji" src="images/seperator.png"> Dorofey (Lithium owner, main developer) <img class="emoji" src="images/seperator.png"></div>
   <span id="typing" class="center"></span>
   <div class="inline-container bottombar center">
     <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
@@ -76,7 +76,7 @@
     <div class="discord-icon">
       <img src="https://github.com/verlonv/haze.github.io/releases/download/zdj/discord.png" alt="Discord Icon">
     </div>
-    <div class="maslaktrb-text">lostcentxry_ <-- Discord </div>
+    <div class="maslaktrb-text">dorofeyy (DM TO BUY) </div>
   </div>
 </div>
   <script src="js/particles.min.js"></script>
@@ -93,7 +93,7 @@
         aud.play();
   
         var typed = new Typed("#typing", {
-          strings: ["anonymous", "lithium main founder", "lithium leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "KJBGSDKLJBSKJBSKLJFSB", "lostcentxry_ - discord", "Po różne usługi typu hacking DM.", "PERSONAL BEST..", "LOADING", ".", ".", ".", "REPROGRAMMING", "study", "sleep", "pray", "eat", "train", "REPEAT...", "(!*&!*(&(*!&(*&!$!$)(!*$)(*!$)(*!$)(&!$)(&#)("], 
+          strings: ["anonymous", "lithium main founder", "lithium leader", "reaping rewards", "professional kpop destroyer", "discord terminated", "KJBGSDKLJBSKJBSKLJFSB", "dorofeyyy - discord", "Po różne usługi typu hacking DM.", "PERSONAL BEST..", "LOADING", ".", ".", ".", "REPROGRAMMING", "study", "sleep", "pray", "eat", "train", "REPEAT...", "(!*&!*(&(*!&(*&!$!$)(!*$)(*!$)(*!$)(&!$)(&#)("], 
           typeSpeed: 60,
           backspeed: 58,
           showCursor: true,
